# personal_mail

./: .gitignore  Cargo.toml  README.md
config/: README.md  category_rules.example.yaml  document_routes.example.yaml  gmail_accounts.example.yaml  hermes_permissions.example.yaml  personal_mail.example.yaml  retention_rules.example.yaml  security_policy.example.yaml
docs/: 00_PRODUCT_VISION.md  01_ARCHITECTURE_DECISIONS.md  02_CLIENT_MAIL_SELECTION.md  03_GMAIL_MULTI_ACCOUNT_MODEL.md  04_GMAIL_OAUTH_IMAP_API_MODEL.md  05_CATEGORY_TAXONOMY.md  06_CLASSIFICATION_RULES.md  07_RETENTION_AND_DELETION_RULES.md  08_DOCUMENT_EXTRACTION_TO_PERSONAL_RADAR.md  09_PERSONAL_RADAR_INTEGRATION.md  10_HERMES_OPERATING_PROTOCOL.md  11_WINDOWS_ANDROID_USAGE_MODEL.md  12_REPLY_AND_COMPOSE_WORKFLOW.md  13_SECURITY_PRIVACY_AND_HUMAN_VALIDATION.md  14_TEST_AND_VALIDATION_PLAN.md  15_IMPLEMENTATION_ROADMAP.md  16_DECISION_LOG.md  17_SECURITY_THREAT_MODEL.md  18_DATA_CLASSIFICATION_AND_RETENTION.md  19_SECRETS_AND_TOKEN_STORAGE.md  20_AUDIT_LOGGING_AND_REDACTION.md  21_ATTACHMENT_SECURITY.md  22_HERMES_SKILL_AND_CONTEXT_PACK.md  23_HERMES_CONTEXT_SYNC_AND_INSTALL.md  24_DEV_PLAN.md
hermes_context/: PERSONAL_MAIL_ACTION_MODES.md  PERSONAL_MAIL_CORE_CONTEXT.md  PERSONAL_MAIL_OPERATING_RULES.md  PERSONAL_MAIL_PROMPT_TEMPLATES.md  PERSONAL_MAIL_SECURITY_RULES.md  PERSONAL_MAIL_VALIDATION_CHECKLISTS.md  README.md
reports/: README.md  classification_feedback.json
reports/cleanup/: README.md
scripts/: auto_verify_phase4.py  classification_rules.json  review_phase4.py
src/: main.rs
(+6 files in other folders)
